package com.BattleShipGame.enums;

public enum CellStatus {
    EMPTY,
    SHIP,
    HIT,
    MISS
}
